Source/WebKit/WebProcess/GPU/webrtc/SampleBufferDisplayLayer.h
@@ -30,6 +30,7 @@
 #include "GPUProcessConnection.h"
 #include "MessageReceiver.h"
 #include "SampleBufferDisplayLayerIdentifier.h"
+#include "SharedVideoFrame.h"
 #include <WebCore/SampleBufferDisplayLayer.h>
 #include <wtf/WeakPtr.h>
 
@@ -73,6 +74,7 @@ private:
     void gpuProcessConnectionDidClose(GPUProcessConnection&) final;
 
     void setDidFail(bool);
+    bool copySharedVideoFrame(CVPixelBufferRef);
 
     WeakPtr<SampleBufferDisplayLayerManager> m_manager;
     Ref<IPC::Connection> m_connection;
@@ -81,6 +83,8 @@ private:
     PlatformLayerContainer m_videoLayer;
     bool m_didFail { false };
     bool m_paused { false };
+
+    SharedVideoFrameWriter m_sharedVideoFrameWriter;
 };
 
 }
